# dev-bootstrap

./: .gitignore  Justfile  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yaml
.hooks/: pre-commit  pre-push
app/bootstrap/: pyproject.toml
app/bootstrap/src/bootstrap/: __init__.py  python.py  ruby.py  runner.py  spark.py
app/bootstrap/tests/: test_runner.py  test_spark.py
app/brew/: pyproject.toml
app/brew/src/brew/: __init__.py  installer.py  packages.py
app/brew/tests/: test_installer.py  test_packages.py
app/cli/: pyproject.toml
app/cli/src/cli/: main.py
app/cli/tests/: test_main.py
app/logger/: pyproject.toml
app/logger/src/logger/: __init__.py  config.py
app/logger/tests/: test_logger_config.py
app/settings/: pyproject.toml
app/settings/src/settings/: __init__.py  config.py
app/settings/tests/: test_settings_config.py
app/shell/: pyproject.toml
app/shell/src/shell/: __init__.py  zshrc.py
app/shell/tests/: test_zshrc.py
app/updater/: pyproject.toml
app/updater/src/updater/: __init__.py  scheduler.py  update.py
app/updater/tests/: test_scheduler.py  test_update.py
development/: .pre-commit-config.yaml  .pylintrc
