[project]
name = "dev-bootstrap-core"
version = "0.1.0"
description = "Core bootstrap orchestration for Ruby, Python, and Spark configuration"
requires-python = ">=3.12"
dependencies = [
    "dev-bootstrap-settings",
    "dev-bootstrap-logger",
    "dev-bootstrap-brew",
    "dev-bootstrap-shell",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]
