[project]
name = "dev-bootstrap-brew"
version = "0.1.0"
description = "Homebrew installation, package management, and cleanup"
requires-python = ">=3.12"
dependencies = [
    "dev-bootstrap-settings",
    "dev-bootstrap-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brew"]
