[project]
name = "dev-bootstrap-cli"
version = "0.1.0"
description = "CLI entry point for the dev-bootstrap toolkit"
requires-python = ">=3.12"
dependencies = [
    "dev-bootstrap-core",
    "dev-bootstrap-updater",
    "dev-bootstrap-logger",
    "click>=8.0",
]

[project.scripts]
dev-bootstrap = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
