[project]
name = "dev-bootstrap-logger"
version = "0.1.0"
description = "Structured logging for the dev-bootstrap toolkit"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logger"]
