[project]
name = "dev-bootstrap-settings"
version = "0.1.0"
description = "Platform detection, brew paths, and package list configuration"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settings"]
