[project]
name = "dev-bootstrap-shell"
version = "0.1.0"
description = "Safe shell configuration file editing with backup support"
requires-python = ">=3.12"
dependencies = [
    "dev-bootstrap-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shell"]
