[project]
name = "dev-bootstrap-updater"
version = "0.1.0"
description = "Auto-update manager with launchd scheduling for Homebrew packages"
requires-python = ">=3.12"
dependencies = [
    "dev-bootstrap-settings",
    "dev-bootstrap-logger",
    "dev-bootstrap-brew",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/updater"]
